<resources>
    <string name="app_name">SingtoStore</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="facebook_app_id">1275354099152439</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tell_user_login">LOGIN OR REGISTER</string>
    <string name="login">LOGIN</string>
    <string name="register">REGISTER</string>
    <string name="forgetpassword">Forget your password?</string>
    <string name="orlab">OR</string>
    <string name="facebooklogin">Sign In With Facebook</string>
    <string name="registeraccount">REGISTER AN ACCOUNT</string>
    <string name="emailHint">Email Address</string>
    <string name="passwordlHint">Password</string>
    <string name="buildingHint">Choose Location</string>
    <string name="roomHint">Room</string>
    <string name="saveFreeAddress">SAVE ADDRESS</string>
    <string name="invalidemail">Invalid Emaill Adreess</string>
    <string name="passwordcannotbeempty">Password is empty</string>
    <string name="passwordiswrong">Wrong Password</string>
    <string name="loggingin">Logging in...</string>
    <string name="registering">Registering...</string>
    <string name="submitting">Submitting...</string>
    <string name="uploading">Uploading...</string>
    <string name="sendingresetpasswordemail">Sending reset password email...</string>
    <string name="passwordtooshort">At least 6 digits</string>
    <string name="sendresetpasswordemail">SEND RESET PASSWORD EMAIL</string>
    <string name="resetpasswordemailwassent">Reset password email was sent,check you inbox.</string>
    <string name="defaultUserName">USER NAME</string>
    <string name="namehint">Name</string>
    <string name="phonehint">Phone Number</string>
    <string name="goback">BACK</string>
    <string name="updateusername">UPDATE</string>
    <string name="upload">UPLOAD</string>
    <string name="namecannotbeempty">Name is empty</string>
    <string name="phonenumberistendigits">Invalid Phone Number</string>
    <string name="updating">Updating...</string>
    <string name="loading">Loading...</string>
    <string name="addtocart">ADD TO CART</string>
    <string name="addedtocart">ADDED TO CART</string>
    <string name="buynow">BUY NOW</string>
    <string name="freeshipping"> FREE DELIVERY</string>
    <string name="shippingfast"> SHIPPING WITHIN 7 DAYS</string>
    <string name="cod"> CASH ON DELIVERY(BANGKOK SELECTED AREA)</string>
    <string name="refundable"> REFUNDABLE WITHIN 7 DAYS</string>
    <string name="nonrefundable"> FOOD, NON-REFUNDABLE</string>
    <string name="storyTab">STORY</string>
    <string name="prdTab">PRODUCT</string>
    <string name="cartTab">CART</string>
    <string name="meTab">ME</string>
    <string name="tellUsertologin">Please login first</string>
    <string name="roomCannotempty">Room Number is Empty</string>
    <string name="addressSaved">Address Saved</string>


</resources>
