<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="store.singto.singtostore.LoginRegister.LoginActivity">

    <ImageView
        android:layout_width="@dimen/userAvatarSize"
        android:layout_height="@dimen/userAvatarSize"
        android:src="@mipmap/ic_launcher"
        android:layout_gravity="center_horizontal"
        android:id="@+id/imageView" />

    <android.support.design.widget.TextInputLayout
        android:layout_marginTop="@dimen/tenMargin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/userEmail"
            android:inputType="textEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimary"
            android:hint="@string/emailHint"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_marginTop="@dimen/tenMargin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/userPassword"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimary"
            android:hint="@string/passwordlHint"/>

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/loginWithEmailBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/twentyMargin"
        android:text="@string/login"
        android:textColor="@color/whiteColor"
        android:background="@color/colorPrimary"/>

    <Button
        android:id="@+id/forgetPasswordBtn"
        android:textColor="@color/graycolor"
        android:layout_marginTop="@dimen/tenMargin"
        android:background="@null"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgetpassword" />

    <TextView
        android:textColor="@color/graycolor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/orlab"/>

    <Button
        android:id="@+id/loginwithfacebookBtn"
        android:textColor="@color/whiteColor"
        android:background="@color/facebookblue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/facebooklogin"
        />

    <Button
        android:id="@+id/gotoRegisterBtn"
        android:background="@null"
        android:textColor="@color/graycolor"
        android:layout_marginTop="@dimen/tenMargin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/registeraccount"/>



</LinearLayout>
