<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_register"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="store.singto.singtostore.LoginRegister.RegisterActivity">

    <Button
        android:id="@+id/returntoLogin"
        android:layout_width="@dimen/fortyMargin"
        android:layout_height="@dimen/fortyMargin"
        android:background="@drawable/ic_cancel_white_24dp"
        android:backgroundTint="@color/colorPrimary"
        android:layout_marginLeft="@dimen/tenMargin"
        android:layout_marginTop="@dimen/tenMargin"/>

    <android.support.design.widget.TextInputLayout
        android:layout_marginTop="@dimen/fortyMargin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/userEmailforRegister"
            android:inputType="textEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimary"
            android:hint="@string/emailHint"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_marginTop="@dimen/twentyMargin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/userPasswordforRegister"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimary"
            android:hint="@string/passwordlHint"/>

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/registerWithEmailBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/fortyMargin"
        android:text="@string/register"
        android:textColor="@color/whiteColor"
        android:background="@color/colorPrimary"/>

</LinearLayout>
